--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
   <section class="section-4"><img class="image-18" src="images/text_effect_119.png" alt="" style="opacity:0" sizes="(max-width: 479px) 90vw, 50vw" data-w-id="a5346b73-16e3-0fed-b215-68b672d40df0" loading="lazy" srcset="images/text_effect_119.png 500w, images/text_effect_119.png 800w, images/text_effect_119.png 1080w, images/text_effect_119.png 1600w, images/text_effect_119.png 2000w, images/text_effect_119.png 2600w, images/text_effect_119.png 3200w, images/text_effect_119.png 3596w"><img src="images/2iiB.gif" loading="lazy" alt="" class="image-19"><img src="images/2iiB.gif" loading="lazy" alt="" class="image-19 _2"><img src="images/2iiB.gif" loading="lazy" alt="" class="image-19 _2 _3">
  <div data-w-id="9fe26b5a-7c78-397d-b91e-ee31e0894995" style="opacity:0" class="div-block-11">
       <div class="div-block-12">
-        <div class="text-block-11 _2">0%</div>
-        <div class="text-block-11">BUY</div>
-      </div>
-      <div class="div-block-12">
-        <div class="text-block-11 _2">0%</div>
-        <div class="text-block-11">SELL</div>
-      </div>
-      <div class="div-block-12">
         <div class="text-block-11 _2">1B</div>
         <div class="text-block-11">SUPPLY</div>
+      </div>
+      <div class="div-block-12">
+        <div class="text-block-11 _2">STEALTH</div>
+        <div class="text-block-11">LAUNCH</div>
+      </div>
+      <div class="div-block-12">
+        <div class="text-block-11 _2">MINT</div>
+        <div class="text-block-11">REVOKED</div>
       </div>
     </div>
   </section>
